tests/outref/TUC000.ref
OCTO> select notathing as a from names;
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_COLUMN_NAME : Unknown column: NOTATHING
Error with syntax near (line 1, column 7):

select notathing as a from names;
       ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select notathing as a from names;

OCTO> select * from names limit 1;
0|Zero|Cool
OCTO> 
